--- a/style.css
+++ b/style.css
@@ -2,14 +2,46 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  color: #fff;
+  font-family: Roboto, sans-serif;
+  line-height: 1.5;
+}
+
+body {
+  background-color: #191522;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
+  padding: 40px 20px;
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
+header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+header h1 {
+    font-family: "Bangers", system-ui;
+}
+
+a {
+transition: 200ms ease-in-out; 
+}
+
+a:hover {
+  color: rgb(112, 185, 102);
 }
 
 #canvas1 {
-  border: 5px solid black;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  border: 5px solid rgb(112, 185, 102);
   background: #4d79bc;
   max-width: 100%;
   max-height: 100%;
@@ -18,4 +50,19 @@
 
 .d-none {
   display: none;
+}
+
+.game-explanation {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  margin-bottom: 24px;
+}
+
+.game-explanation h2 {
+  margin-bottom: 8px;
+}
+
+footer p {
+  font-size: .8rem;
 }
